Fix header alignment

--- a/client/app/styles/skill.scss
+++ b/client/app/styles/skill.scss
@@ -9,7 +9,10 @@
         margin: 10% 10% 0% 10%;
     }
     h1 {
-        text-align: left;
         margin: 5% 10% 0% 10%;
+    }
+
+    Table {
+        margin-top: 20px;
     }
 }
